samples/_failures_safe/1761523447_b32735_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63b42491.c: In function ‘main’:
./samples/SAFE/__tmp_63b42491.c:171:5: error: expected declaration or statement at end of input
  171 |     return 0;
      |     ^~~~~~
